# yair

./: .gitignore  .gitmodules  404.html  Cargo.toml  README.md  build.rs  deny.toml  index.html  index.xml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: rust.yml
categories/: index.xml
css/: main.css
dev/bench/: data.js
examples/: benchmarks.rs
hugo/: config.toml
hugo/layouts/partials/: footer.html
hugo/layouts/partials/index/: pinnedPost.html
src/: argument.rs  block.rs  codegen.rs  constant.rs  context.rs  function.rs  global.rs  instructions.rs  jitgen.rs  lib.rs  library.rs  linkgen.rs  location.rs  module.rs  value.rs  verify.rs
src/io/: mod.rs  test-lit-shell.rs  test-lit-shell.yml  yair-as.rs  yair-as.yml  yair-dis.rs
src/io/benchmarks/: mod.rs
src/jit/: yair-jit.rs  yair-jit.yml
src/lld/: mod.rs
src/llvm/: extras.cpp  mod.rs  yair-llvm.rs  yair-llvm.yml
src/llvm/benchmarks/: huge.ya  mod.rs
src/verifier/: yair-verify.rs  yair-verify.yml
src/yalang/bootstrap/: bin.rs  bootstrap.rs  bootstrap.yml
tags/: index.xml
tests/: lit.rs
tests/all/assembler/insts/: bitcast.ya  call.ya  indexinto.ya  rem.ya  stackalloc.ya
tests/all/assembler/mod/: empty.ya  multiple_modules.ya
tests/all/assembler/var/: array.ya
tests/all/verifier/: binary_rem_bool.ya  call_func_mismatch_args0.ya  fn_block_mismatch_args.ya  job_mismatch2.ya
tests/lit/all/verifier/: binary_add_bool.ya  binary_and_float.ya  binary_div_bool.yail  binary_shl_bool.yail  binary_types_must_match.yail  br_block_mismatch_args0.yail  call_func_mismatch_args1.yail  cbr_false_block_mismatch_args0.yail  cbr_false_block_mismatch_args1.ya  cbr_non_bool.ya  cbr_true_block_mismatch_args1.ya  fn_does_not_match_ret.ya  job_mismatch1.yail  named_stackalloc_must_be_unique.yail  stackalloc_must_appear_in_entry_block.yail  unary_not_ptr.yail
tests/lit/assembler/consts/: i64.ya  u8.ya
tests/lit/assembler/fn/: export.ya
tests/lit/assembler/insts/: br.ya  call.ya  ret_value.ya  shl.ya  xor.ya
tests/lit/assembler/loc/: fn.ya
tests/lit/assembler/mod/: bad_fn_or_var.ya
tests/lit/assembler/struct/: var_with_named_struct.ya
tests/lit/assembler/var/: export.ya  load.ya
tests/lit/consts/: array.ya  bool_false.ya  f16.ya  f64.ya  i32.ya  i8.ya  ptr_null.ya  struct.ya  u16.ya  u32.ya  u64.ya  vector.ya
tests/lit/fn/: bad_export.ya  one_arg.ya  one_arg_body.ya
tests/lit/insts/: and.ya  cbr.ya  cmp_le.ya  extract.ya  load.ya  neg.ya  store.ya
tests/lit/llvm/asm/: add_f32.yail  add_i32.ya  add_i32.yail  add_u32.ya  add_u32.yail  and_i32.yail  and_u32.yail  bitcast.yail  br.yail  div_f32.yail  div_i32.yail  div_u32.ya  div_u32.yail  mul_f32.ya  mul_f32.yail  mul_i32.yail  mul_u32.ya  mul_u32.yail  or_i32.yail  or_u32.ya  or_u32.yail  rem_f32.yail  rem_i32.ya  rem_i32.yail  rem_u32.ya  rem_u32.yail  sub_f32.ya  sub_f32.yail  sub_i32.ya  sub_i32.yail  sub_u32.ya  sub_u32.yail  xor_i32.yail  xor_u32.yail
tests/lit/llvm/ir/: function_with_named_struct.yail
tests/lit/llvm/jit/: i32.yail  nop.ya  nop.yail
tests/lit/loc/: inst.ya
tests/lit/mod/: missing_closing_brace.ya  unicode.ya
tests/lit/var/: array.ya  basic.ya  struct.ya  vector.ya
tests/lit/verifier/: binary_mul_bool.ya  binary_or_float.ya  binary_shr_bool.ya  binary_sub_bool.ya  binary_xor_float.ya  br_block_mismatch_args1.ya  call_block_mismatch_args.ya  call_func_mismatch_args0.ya  call_func_mismatch_args1.ya  cast_with_scalar_and_vector.ya  cast_with_type_void.ya  cast_with_vectors_of_different_width.ya  cbr_true_block_mismatch_args0.ya  cmp_type_not_float_or_int.ya  cmp_types_must_match.ya  fn_block_mismatch_num_args.ya  job_mismatch0.ya  unary_neg_bool.ya
tests/lit/yalang/expressions/: add.ya  and.ya  as.ya  div.ya  eq.ya  ge.ya  gt.ya  le.ya  lt.ya  mod.ya  mul.ya  ne.ya  not.ya  or.ya  sub.ya  xor.ya
tests/lit/yalang/syntax/: add.ya  array.ya  assignment.ya  break.ya  call.ya  const_f32.ya  const_i32.ya  const_u32.ya  continue.ya  create_var.ya  empty.ya  empty_function.ya  empty_scope.ya  if.ya  if_with_if.ya  ifelse.ya  ifelseif.ya  ifelseifelse.ya  mod.ya  multi_line_comment.ya  multiple_operands.ya  one_arg_function.ya  package.ya  scope_with_if.ya  shadowing_identifiers_in_scopes.ya  single_line_comment.ya  two_arg_function.ya  while.ya  whitespace.ya
tests/llvm/asm/: add_f32.ya  and_i32.ya  and_u32.ya  bitcast.ya  br.ya  div_f32.ya  div_i32.ya  fadd.ya  mul_i32.ya  or_i32.ya  rem_f32.ya  xor_i32.ya  xor_u32.ya
tests/llvm/asm/fn/: use_c_func.ya
tests/llvm/ir/: add_f32.ya  add_i32.ya  add_u32.ya  and_i32.ya  and_u32.ya  bitcast.ya  br.ya  call.ya  cast_f32_to_u32.ya  cast_i32_to_f32.ya  cast_i32_to_u64.ya  cast_u32_to_i64.ya  cast_u32_to_u64.ya  cbr.ya  cmp_eq_f32.ya  cmp_eq_i32.ya  cmp_eq_u32.ya  cmp_ge_f32.ya  cmp_ge_i32.ya  cmp_gt_f32.ya  cmp_gt_i32.ya  cmp_gt_u32.ya  cmp_le_u32.ya  cmp_ne_u32.ya  div_f32.ya  div_i32.ya  div_u32.ya  extract.ya  fadd.ya  load.ya  mul_f32.ya  mul_i32.ya  mul_u32.ya  not_i32.ya  or_i32.ya  or_u32.ya  rem_f32.ya  rem_i32.ya  rem_u32.ya  select.ya  (+7 more)
yair/: Cargo.toml
yair-as/: Cargo.toml
yair-as/src/: clap.yml  grammar.pest  main.rs
yair-as/tests/: lit.rs
yair-as/tests/lit/fn/: no_args.ya
yair-as/tests/lit/mod/: empty.ya  multiple_modules.ya  unicode.ya
yair-as/tests/lit/var/: basic.ya  export.ya
yair-io/: Cargo.toml
yair-io/src/: lib.rs  test-lit-shell.rs  yair-as.rs  yair-dis.rs  yair-dis.yml
yair-io/tests/: lit.rs
yair-io/tests/lit/fn/: bad_export.ya
yair-io/tests/lit/insts/: add.ya  cast.ya  cmp_bad.ya  cmp_eq.ya  cmp_gt.ya  cmp_ne.ya  div.ya  indexinto.ya  insert.ya  mul.ya  ret_void.ya  shr.ya
yair-io/tests/lit/mod/: bad_fn_or_var.ya  bad_quoted.ya  bad_simple.ya  missing_closing_brace.ya  missing_module_name.ya  missing_opening_brace.ya
yair-io/tests/lit/var/: array.ya  basic.ya  export.ya  struct.ya  vector.ya
yair/src/: argument.rs  block.rs  constant.rs  function.rs  global.rs  instructions.rs  lib.rs  library.rs  location.rs  module.rs  value.rs
(+148 files in other folders)
