[package]
name = "yair"
license = "CC0-1.0"
version = "0.1.0"
authors = ["Neil Henning <sheredom@gmail.com>"]
edition = "2018"
repository = "https://github.com/sheredom/yair"
description = "A compiler framework written entirely in Rust"

[dependencies]
enumset = { version = "1.0.6", features = ["serde"] }
generational-arena = { version = "0.2.7", features = ["serde"] }
radix_trie = { version = "0.2.1", features = ["serde"] }
serde = { version = "1.0.104", features = ["derive"] }
embedded-triple = "0.1.0"

clap = { version = "2.33.3", features = ["yaml"], optional = true }
codespan = { version = "0.7.0", optional = true }
codespan-reporting = { version = "0.7.0", optional = true }
duct = { version = "0.13.4", optional = true }
rmp-serde = { version = "0.15.1", optional = true }
codemap = { version = "0.1.3", optional = true }
logos = { version = "0.12.0", optional = true }

llvm-sys = { version = "110.0.1", features = ["no-llvm-linking"], optional = true }
libc = { version = "0.2.92", optional = true }

[build-dependencies]
envcache = "0.1.3"

[dev-dependencies]
lit = "1.0.3"

[features]
io = ["clap", "codespan", "codespan-reporting", "duct", "rmp-serde"]
llvm = ["llvm-sys", "libc"]
lld = ["llvm"]
yalang = ["io", "codemap", "logos"]
nightly = []
default = ["io"]

[[bin]]
name = "yair-as"
path = "src/io/yair-as.rs"
required-features = ["io"]

[[bin]]
name = "yair-dis"
path = "src/io/yair-dis.rs"
required-features = ["io"]

[[bin]]
name = "yair-verify"
path = "src/verifier/yair-verify.rs"
required-features = ["io"]

[[bin]]
name = "yair-jit"
path = "src/jit/yair-jit.rs"
required-features = ["io"]

[[bin]]
name = "yair-llvm"
path = "src/llvm/yair-llvm.rs"
required-features = ["llvm"]

[[bin]]
name = "test-lit-shell"
path = "src/io/test-lit-shell.rs"
required-features = ["io"]

[[bin]]
name = "bootstrap"
path = "src/yalang/bootstrap/bootstrap.rs"
required-features = ["yalang"]
