[package]
name = "yair-as"
version = "0.0.1"
authors = ["Neil Henning <sheredom@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "2.33.0", features = ["yaml"] }
pest_derive = "2.1.0"
pest = "2.1.2"
rmp-serde = "0.14.0"
serde = { version = "1.0.103", features = ["derive"] }
yair = { path = "../yair", version = "0.0.1" }

[dev-dependencies]
lit = "0.3.4"
