[package]
name = "yair-io"
license = "CC0-1.0"
version = "0.0.1"
authors = ["Neil Henning <sheredom@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "2.33.3", features = ["yaml"] }
codespan = "0.7.0"
codespan-reporting = "0.7.0"
duct = "0.13.4"
rmp-serde = "0.15.1"
serde = { version = "1.0.104", features = ["derive"] }
yair = { path = "../yair", version = "0.0.1" }

[dev-dependencies]
lit = { git = "https://github.com/sheredom/lit.git" }

[lib]
name = "yair_io"
path = "src/lib.rs"

[[bin]]
name = "yair-as"
path = "src/yair-as.rs"

[[bin]]
name = "yair-dis"
path = "src/yair-dis.rs"

[[bin]]
name = "test-lit-shell"
path = "src/test-lit-shell.rs"
