[package]
name = "yair"
license = "CC0-1.0"
version = "0.0.1"
authors = ["Neil Henning <sheredom@gmail.com>"]
edition = "2018"

[dependencies]
bytemuck = "1.2.0"
generational-arena = { version = "0.2.7", features = ["serde"] }
radix_trie = { version = "0.2.1", features = ["serde"] }
serde = { version = "1.0.104", features = ["derive"] }
